<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhoWantsToBeaMillionaire</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo_main">Main</string>
    <string name="titulo_play">"Play "</string>
    <string name="titulo_scores">"Scores  "</string>
    <string name="titulo_settings">"Settings  "</string>
    <string name="titulo_millonario">Millionaire</string>
    <string name="titulo_question">"Question: "</string>
    <string name="descripcion_logo">Logo</string>
    <string name="descripcion_header">Header</string>
    <string name="menu_credits">"Credits "</string>
    <string name="autor">Authors:</string>
    <string name="autor_victor">Victor Ahuir Dominguez</string>
    <string name="autor_josep">Josep Maria Tomas Sendra </string>
    <string name="mail_victor">vicahdo@fiv.upv.es</string>
    <string name="mail_josep">jotosen@fiv.upv.es </string>
    <string name="copyright">© ADM-2013 </string>
    <string name="name_settings"> Name: </string>
    <string name="jugadores_settings">Number of helps: </string>
    <string name="add_friend_settings">Add friend</string>
    <string name="descripcion_main_logo">Main Logo</string>
    <string name="title_activity_creditos">Credits</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="tab_local">Local</string>
    <string name="tab_friends">Friends</string>
    <string name="play_playing_for">"Playing for: "</string>
    <string name="play_current">"100000€"</string>
    <string name="play_opcion_a">"A:"</string>
    <string name="play_opcion_b">"B:"</string>
    <string name="play_opcion_c">"C:"</string>
    <string name="play_opcion_d">"D:"</string>
    <string name="play_item_phone">"Phone"</string>
    <string name="play_item_50">"50%"</string>
    <string name="play_item_audience">"Audience"</string>
    <string name="play_item_end">"End game"</string>
	<string name="file">questions0001</string>
	<string name="local_currency">" $"</string>
    <string-array name="array_ayudas">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="array_puntuaciones">
        <item>0</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>4000</item>
        <item>8000</item>
        <item>16000</item>
        <item>32000</item>
        <item>64000</item>
        <item>125000</item>
        <item>250000</item>
        <item>500000</item>        
        <item>1000000</item>  
        </string-array>

    <string name="title_activity_scores">ScoresActivity</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_fullscreen_play">FullscreenPlayActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="NoHelp">No helps remaining</string>
    <string name="deleteScore">Delete local scores</string>
    <string name="backAndContinue">Continue</string>
    <string name="backAndNotSave">Exit without saving</string>
    <string name="backAndPause">Pause play</string>
	<string name="batteryLow">Low battery</string>
	<string name="userAdded">New friend added correctly</string>
	<string name="downloadScores">Downloading scores</string>
	<string name="titleWarningExit">Are you sure to exit?</string>
	<string name="warning">Warning</string>
	<string name="finPartida">Game over:</string>
	<string name="score">score</string>
</resources>
