<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:gravity="center"
    android:textStyle="bold"
    style="@style/TextoConSombra"
    android:layout_marginTop="5dp">

    <TextView
        android:id="@+id/textViewAutores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        style="@style/TituloConSombra"
        android:textColor="#ffffff"
        android:layout_marginBottom="20dp"  />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor_josep"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        style="@style/TextoConSombra" 
        android:textColor="#ffffff"  />
	<TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_josep"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        style="@style/TextoConSombra" 
        android:textColor="#ffffff"
        android:layout_marginBottom="20dp"  />

	<TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor_victor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        style="@style/TextoConSombra"
        android:textColor="#ffffff"  />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_victor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        style="@style/TextoConSombra" 
        android:textColor="#ffffff"
        android:layout_marginBottom="20dp"  />  
	<TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        style="@style/TextoConSombra" 
        android:textColor="#ffffff"  />
</LinearLayout>