<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/back" >
    
    <Button
        android:id="@+id/buttonHeaderPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:gravity="center|right"
        style="@style/TituloConSombra" 
        android:text="@string/titulo_question" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewPlayingFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/play_playing_for"
            style="@style/TextoConSombra"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_current"
            style="@style/TituloConSombra"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center|center"
        style="@style/TextoConSombra"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center" >

        <Button
            android:id="@+id/buttonOpcionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_opcion_a"
            style="@style/TextoConSombra"
            android:textStyle="bold"
            android:background="@drawable/button_opcion"/>
        
        <Button
            android:id="@+id/buttonOpcionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_opcion_b"
            style="@style/TextoConSombra"
            android:textStyle="bold"
            android:background="@drawable/button_opcion"/>
        
        <Button
            android:id="@+id/buttonOpcionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_opcion_c"
            style="@style/TextoConSombra"
            android:textStyle="bold"
            android:background="@drawable/button_opcion"/>
        
        <Button
            android:id="@+id/buttonOpcionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_opcion_d"
            style="@style/TextoConSombra"
            android:textStyle="bold"
            android:background="@drawable/button_opcion"/>

    </LinearLayout>

</LinearLayout>