<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" android:stretchColumns="1" >
	
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <ImageView
            android:id="@+id/logo_izq"
			android:contentDescription="@string/descripcion_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon"
            android:layout_gravity="right" />

        <TextView
            android:id="@+id/titulo_ventana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_settings"
            android:textAppearance="?android:attr/textAppearanceMedium"
          	android:layout_gravity="center_vertical"
          	android:gravity="center"
          	android:textColor="#ffffff"  />
			
        <ImageView
            android:id="@+id/logo_derecha"
            android:contentDescription="@string/descripcion_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="right"
            android:src="@drawable/icon" />
        
    </TableRow>
    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_settings"
        android:textAppearance="?android:attr/textAppearanceMedium"           
        android:textColor="#ffffff"  />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

	

        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugadores_settings"
        android:textAppearance="?android:attr/textAppearanceMedium"           
        android:textColor="#ffffff"  />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_friend_settings" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    
</TableLayout>